@@ -127,6 +127,15 @@ code {
   box-shadow: @cr-button-console-box-shadow--active;
 }
 
+.cr-button--disabled {
+  color: @cr-button-color--disabled !important;
+  cursor: default;
+}
+
+.cr-button--disabled > i {
+  color: @cr-button-color--disabled !important;
+}
+
 .faded-text {
   opacity: 0.2;
 }
