@@ -111,7 +111,7 @@
 
 @cr-button-console-color--primary:      #fff;
 @cr-button-console-bg-color--primary:   #444;
-
+@cr-button-color--disabled:				#777676;
 //
 // Table
 // -----------------------------------------------
