@@ -95,22 +95,23 @@
 // ------------------------------------------------
 
 @cr-button-icon-color:              #000;
-@cr-button-bg-color--hover:         rgba(162,162,162,0.5);
-@cr-button-bg-color--active:        #c2c2c2;
+@cr-button-bg-color--hover:         #a2a0a0;
+@cr-button-bg-color--active:        #a2a0a0;
 @cr-button-box-shadow--active:      0 0 3px -1px rgba(0,0,0,0.5);
 
 
 @cr-button-color--primary:      #000;
-@cr-button-bg-color--primary:   #cccccc;
+@cr-button-bg-color--primary:   #b1b1b1;
 
 @cr-button-console-icon-color:              #fff;
-@cr-button-console-bg-color--hover:         #4e4e4e;
-@cr-button-console-bg-color--active:        #333;
+@cr-button-console-bg-color--hover:         #a2a0a0;
+@cr-button-console-bg-color--active:        #a2a0a0;
 @cr-button-console-box-shadow--active:      0 0 3px -1px rgba(0,0,0,0.5);
 
 
 @cr-button-console-color--primary:      #fff;
-@cr-button-console-bg-color--primary:   #444;
+@cr-button-console-bg-color--primary:   #b1b1b1;
+@cr-button-color--disabled:				#d2d2d2;
 
 //
 // Table
