@@ -1,9 +1,9 @@
-<div class="page-container" lazy-load-scroll="loadMoreRows(50)">
+<div class="page-container">
     <div class="cr-page-header">
       <h1>{{ 'NAVIGATION.CONSOLE' | translate }}</h1>
     </div>
 
-    <div console>
+    <div class="cr-console" console>
         <div>
           <div class="cr-console-header">
             <div class="cr-console-header__tip">{{ 'CONSOLE.TIP' | translate }}</div>
@@ -34,7 +34,7 @@
           </div>
 
           <div>
-            <cli mime-type="text/x-cratedb" theme="monokai"></cli>
+            <cli id="console-editor" mime-type="text/x-cratedb" theme="monokai"></cli>
           </div>
 
           <div class="cr-console-header">
@@ -69,40 +69,47 @@
 
     <div ng-if="renderTable" class="query-result-container" ng-class="{colourised: formatResults}">
 
-      <h2  class="query-result-container__header">{{:: 'CONSOLE.RESULT_FROM_QUERY' | translate }}</h2>
-      <div class="table-responsive">
-        <table class="table">
+      <div class="query-result-container__header">
+
+      <div class="query-result-container__header--title">{{:: 'CONSOLE.RESULT_FROM_QUERY' | translate }}</div>
+      <div id="previous" class="cr-console-header__options__item--btn cr-button cr-button--console query-result-container__header--previous" ng-click="previous()" ng-class="page === 1 ?  'cr-button--disabled':'' "><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+      <div class="query-result-container__header--page" ng-click="previous()">{{ page }} / {{ numberOfPages }}</div>
+      <div id="next" class="cr-console-header__options__item--btn cr-button cr-button--console query-result-container__header--next" ng-class="page === numberOfPages ?  'cr-button--disabled':'' " ng-click="next()"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+      </div>
+      <div class="table-responsive" id="console-table">
+
+        <table class="table table-console">
           <thead>
-            <tr>
+            <tr class="table-header">
               <th class="header cr-table-cell" ng-repeat="header in ::resultHeaders track by $index">{{:: header }}</th>
             </tr>
           </thead>
-          <tbody ng-if="formatResults && resultHeaderTypes.length > 0">
-            <tr ng-repeat="row in formatted_rows | limitTo:limitToAmount track by $index" class="cr-table-row">
-              <td class="cr-table-cell" ng-repeat="column in ::row track by $index" ng-switch="column.type">
+          <tbody ng-if="formatResults && resultHeaderTypes.length > 0 && paginated_formatted_rows.length > 0">
+            <tr ng-repeat="row in paginated_formatted_rows track by $index" class="cr-table-row">
+              <td class="cr-table-cell" ng-repeat="column in row track by $index" ng-switch="column.type">
 
                   <pre class="query-result string" ng-switch-when="null">NULL</pre>
 
-                  <pre class="query-result object" ng-switch-when="geo_point" >{{:: column.value }} <a ng-href="https://www.openstreetmap.org/?mlat={{column.value[1]}}&mlon={{column.value[0]}}&layers=H" target="_blank"><i class="fa fa-external-link"></i></a></pre>
+                  <pre class="query-result object" ng-switch-when="geo_point" >{{ column.value }} <a ng-href="https://www.openstreetmap.org/?mlat={{column.value[1]}}&mlon={{column.value[0]}}&layers=H" target="_blank"><i class="fa fa-external-link"></i></a></pre>
 
-                  <pre class="query-result string" ng-switch-when="timestamp">{{:: column.value }} <span class="formatted-timestamp">({{:: column.value | formatTimestamp }})</span></pre>
+                  <pre class="query-result string" ng-switch-when="timestamp">{{ column.value }} <span class="formatted-timestamp">({{ column.value | formatTimestamp }})</span></pre>
 
                   <pre class="query-result" ng-switch-when="array" ><formatted-array array="column.value" typesarray="{{resultHeaderTypes[$index]}}" expand="true"></formatted-array></pre>
 
                   <pre class="query-result" ng-switch-when="object"><formatted-object object="column.value" expand="true"></formatted-object></pre>
 
-                  <pre class="query-result object" ng-switch-when="geo_shape"><span>Type</span>: {{:: column.value['type']}} <a ng-href="http://geojson.io/#data=data:application/json,{{:: urlEncodedJson(column)}}" target="_blank"><i class="fa fa-external-link"></i></a><br/><span>Coordinates</span>: {{:: column.value['coordinates'] }} </pre>
-                  <div ng-switch-default class="query-result cr-table-cell--max-width" ng-class="column.type">{{:: column.value }}<span class="unsafe-number" data-original-title="{{:: 'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column.value)"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></span>
+                  <pre class="query-result object" ng-switch-when="geo_shape"><span>Type</span>: {{ column.value['type']}} <a ng-href="http://geojson.io/#data=data:application/json,{{urlEncodedJson(column)}}" target="_blank"><i class="fa fa-external-link"></i></a><br/><span>Coordinates</span>: {{ column.value['coordinates'] }} </pre>
+                  <div ng-switch-default class="query-result cr-table-cell--max-width" ng-class="column.type">{{column.value }}<span class="unsafe-number" data-original-title="{{'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column.value)"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></span>
                   </div>
                   
               </td>
               </tr>
               </tbody>
-              <tbody ng-if="!formatResults || resultHeaderTypes.length == 0">
-                <tr ng-repeat="row in rows | limitTo:limitToAmount track by $index" class="cr-table-row">
-                <td class="cr-table-cell" ng-repeat="column in ::row track by $index">
-                    <pre class="query-result"> {{:: column !== null ? column : 'NULL' }} 
-                      <span class="unsafe-number" data-original-title="{{:: 'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column)">
+              <tbody ng-if="(!formatResults || resultHeaderTypes.length == 0) && paginated_rows.length > 0">
+                <tr ng-repeat="row in paginated_rows  track by $index" class="cr-table-row">
+                <td class="cr-table-cell" ng-repeat="column in row track by $index">
+                    <pre class="query-result"> {{column !== null ? column : 'NULL' }} 
+                      <span class="unsafe-number" data-original-title="{{ 'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column)">
                         <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                       </span> 
                     </pre>
