@@ -1,16 +1,16 @@
 <div class="formatted-object">
-  <div class="formatted-object__title"><a ng-click="toggleExpand()"><i class="fa fa-caret-right" ng-class="isExpanded ? 'expanded-icon' : ''"></i> Object</a></div>
+  <div class="formatted-object__title"><a ng-click="toggleExpand()"> <i class="fa fa-caret-right expand-object-icon" ng-class="isExpanded ? 'expanded-icon' : ''"></i> Object </a></div>
   <div class="formatted-object__elements" ng-if="isExpanded">
     <div ng-repeat="key in keys track by $index">
       <span ng-if="ObjectTypeCheck.isObject(object[key])" class="formatted-object__element">
-        <div class="formatted-object__element__key">{{:: key }}</div> <div class="formatted-object__element__seperator">:</div> 
+        <div class="formatted-object__element__key">{{ key }}</div> <div class="formatted-object__element__seperator">:</div> 
         <formatted-object object="getField(key)" expand="false"></formatted-object>
       </span>
       <span ng-if="ObjectTypeCheck.isArray(object[key])" class="formatted-object__element">
-        <div class="formatted-object__element__key">{{:: key }}</div> <div class="formatted-object__element__seperator">:</div> <formatted-array array="getField(key)" typesarray="[100, 1]" expand="false"></formatted-array>
+        <div class="formatted-object__element__key">{{ key }}</div> <div class="formatted-object__element__seperator">:</div> <formatted-array array="getField(key)" typesarray="[100, 1]" expand="false"></formatted-array>
       </span>
       <span ng-if="ObjectTypeCheck.isValue(object[key])" class="formatted-object__element">
-        <div class="formatted-object__element__key">{{:: key }}</div> <div class="formatted-object__element__seperator">:</div> <div ng-class="ObjectTypeCheck.getType(object[key])">{{:: getField(key) !== null ? getField(key) : 'NULL'  }}</div>
+        <div class="formatted-object__element__key">{{ key }}</div> <div class="formatted-object__element__seperator">:</div> <div ng-class="ObjectTypeCheck.getType(object[key])">{{ getField(key) !== null ? getField(key) : 'NULL'  }}</div>
       </span>
     </div>
   </div>
